allow custom OS image id when creating new VNF
