# ni_nfvo/swagger/swagger.yaml
@@ -487,12 +487,16 @@ definitions:
       user_data:
         type: "string"
         description: "configuration to pass to the Vnf at boot (e.g., cloud-init)"
+      image_id:
+        type: "string"
+        description: "custom OS image id other than the default id from falvor"
     description: "specification to deploy Vnf."
     example:
       flavor_id: "flavor_id"
       node_name: "node_name"
       vnf_name: "vnf_name"
       user_data: "user_data"
+      image_id: "image_id"
 externalDocs:
   description: "Find out more about DPNM NI."
   url: "http://dpnm.postech.ac.kr/"
